--- a/_pages/MAE4300.md
+++ b/_pages/MAE4300.md
@@ -8,7 +8,7 @@ title: MAE 4300 Ethics Portfolio
 
 Sarah Grace Brown  
 NetID: seb353  
-Fall 2024
+Fall 2025
 
 ---
 
@@ -94,7 +94,175 @@ Based on documented concerns, engineering culture, and the eventual problems dis
 - Boeing's organizational culture and incentives discouraged employees from slowing production or questioning whether standards are actually sufficient for safety
 - Senior management prioritized schedule and certification speed over raising concerns documented by engineers
 - Engineers had access to internal channels to raise safety concerns before external certification
-- Boeing engineers possessed sufficient technical knowledge to understand single-sensor risks
+- Boeing engineers possessed sufficient technical knowledge to understand single-sensor risks---
+layout: default
+title: MAE 4300 Ethics Portfolio
+---
+
+# Engineering Ethics Portfolio
+**MAE 4300: Ethics in Engineering** | Sarah Grace Brown | NetID: seb353 | Fall 2024
+
+---
+
+## Introduction
+
+This portfolio analyzes the Boeing 737 MAX MCAS system failures through frameworks for identifying ethical issues, analyzing stakeholder impacts, and navigating constraints engineers face in professional practice. The case illustrates fundamental tensions in engineering ethics: conflict between public safety and organizational pressures, challenges of regulatory delegation, and consequences when technical decisions are driven by competitive and financial considerations rather than safety imperatives.
+
+Key insights include recognition that ethical engineering practice requires technical competence, moral courage to raise safety concerns, transparency in communication with regulators and stakeholders, and systematic processes for identifying and mitigating risks. The analysis revealed how organizational culture, regulatory ambiguity, economic pressures, and information silos create environments where engineers face significant barriers to upholding ethical standards.
+
+---
+
+## Case Study: Boeing 737 MAX MCAS System
+
+The Boeing 737 MAX Maneuvering Characteristics Augmentation System (MCAS) represents one of the most significant aviation safety failures in recent history. Two catastrophic crashes—Lion Air Flight 610 (October 2018) and Ethiopian Airlines Flight 302 (March 2019)—killed 346 people and revealed systemic failures in engineering ethics, safety culture, and regulatory oversight.
+
+### Material Facts
+
+1. MCAS could command nose-down trim using Angle of Attack (AOA) input from a single sensor, creating single-point-of-failure vulnerability.
+2. Two crashes involved design certification concerns and training shortcomings related to MCAS nose-down inputs.
+3. Investigators found design certification errors and training shortcomings related to MCAS.
+4. Regulators granted MAX certification; FAA reviewed software before launch.
+5. US Justice Department took action against Boeing regarding corporate accountability findings.
+
+### Individual Facts
+
+1. Boeing's 2016 email showed chief technical pilot Mark Forkner messaging that MCAS was "running rampant" in the simulator, indicating prior awareness of system behavior issues.
+2. Mark Forkner provided FAA with false information about MCAS, so the system wasn't included in pilot manuals.
+3. In Lion Air crash, pilots weren't informed of MCAS existence, preventing understanding or overriding erroneous system behavior.
+4. In Ethiopian crash, Captain & First Officer had insufficient communication; an off-duty 737 pilot used expertise to advise crew to disable electrical trim system.
+5. In flight before Lion crash, an off-duty 737 pilot advised crew to disable electrical trim system to regain control.
+
+### Organizational Facts
+
+1. Boeing prioritized schedule and cost over safety concerns (US House Committee investigation).
+2. Organization's designation authorization structure delegated safety certification authority from FAA to Boeing—US DOT Inspector General found this created conflicts.
+3. Boeing management linked employee performance metrics and bonuses to 737 MAX production (New York Times).
+4. Company's communication culture discouraged employees from raising safety issues (Reuters investigation).
+5. Boeing's competitive strategy against Airbus led executives to promise MAX would require no simulator training (Wall Street Journal).
+
+### Reasonable Assumptions
+
+Based on documented concerns, engineering culture, and eventual problems discovered, it is reasonable to assume that some Boeing engineers raised concerns about single-sensor dependency and repeated activation risks, but these concerns were either not communicated up the management chain or were overruled due to schedule and cost pressures.
+
+**Supporting Evidence:** Internal safety analysis identified catastrophic single-sensor failure scenarios; engineers were knowledgeable about concerns being raised; post-crash investigation revealed erroneous MCAS activation risk had been identified but not treated as critical; Boeing's hierarchical culture discouraged challenging management decisions; organizational culture discouraged slowing production; senior management prioritized schedule over safety concerns; engineers had internal channels to raise safety concerns; Boeing engineers possessed technical knowledge to understand single-sensor risks; stakeholders assumed Boeing followed industry-standard redundancy practices.
+
+### Key Term Clarifications
+
+**Safety** - Boeing: Met FAA regulations, risk within acceptable limits. Families: Zero risk, moral/legal responsibility to prevent harm. FAA: Compliance with certification requirements. *Ethical Impact:* Compliance vs. moral duty—whether minimum regulatory standards suffice or if engineers have independent moral obligations.
+
+**Accountability** - Boeing: Settlements and corrective actions. Families: Moral/legal responsibility, criminal prosecution. FAA: Regulatory oversight responsibilities. *Ethical Impact:* Narrow vs. moral definitions determine who bears responsibility and whether systemic reforms address root causes.
+
+**Integrity** - Boeing: Technical honesty and performance. Families: Full transparency about flaws over profit. FAA: Unbiased, pressure-free oversight. *Ethical Impact:* Competence vs. honesty—whether culture valuing competitive advantage pressures employees to minimize disclosure.
+
+**Transparency** - Boeing: Legally accurate disclosures meeting regulatory requirements. Families: Full public sharing of risks in clear terms. FAA: Prompt receipt of all necessary technical data. *Ethical Impact:* Compliance vs. openness—whether transparency requires independent safety prioritization.
+
+**Public Trust** - Boeing: Confidence in brand based on historical performance. Families: Trust built on honesty and empathy. FAA: Trust through rigorous regulation. *Ethical Impact:* Image vs. moral trust—whether reporting would have upheld ethical duty.
+
+---
+
+## Ethical Analysis Framework
+
+### Stakeholder Identification
+
+**Primary Stakeholders:** Commercial airline passengers, pilots worldwide, certification engineers at Boeing, families of crash victims
+
+**Secondary Stakeholders:** Airlines, FAA regulators, Boeing shareholders
+
+**Decision-Makers:** Boeing senior certification engineers, Boeing management approving final certification
+
+### Ethical Principles and Canons
+
+**Relevant ASME Canons:** Canon 1 (Engineers shall hold paramount the safety, health, and welfare of the public) | Canon 2 (Engineers shall perform services only in areas of their competence) | Canon 4 (Engineers shall act as faithful agents for employers while avoiding conflicts of interest) | Canon 7 (Engineers shall issue public statements only in objective and truthful manner)
+
+### Conflicts Analysis
+
+Canon 1 (public safety paramount) directly conflicts with Canon 4 (faithful service to Boeing as employer). Engineers faced pressure to certify a system that met regulatory minimums but may not have met public safety maximization.
+
+**Hierarchy Decision:** Canon 1 takes absolute precedence. ASME interpretation states engineers "shall not approve or seal plans and/or specifications that are not of a design safe to the public health and welfare". This hierarchy is universally applicable—public safety always overrides employer loyalty in life-critical systems.
+
+---
+
+## Practical Constraints on Ethical Decision-Making
+
+**Issue 1 - Ignoring Safety Risks:** Constraint: Organizational pressure and job security. Engineers feared losing jobs if they delayed production. Boeing's culture emphasized schedule adherence and cost control, making refusal to certify MCAS a potential career-ending decision.
+
+**Issue 2 - Inadequate Testing:** Constraint: Economic schedule constraints. Tight deadlines, limited budgets, and client demands limited testing time. Comprehensive testing would have required simulator upgrades and pilot training programs conflicting with Boeing's commitment that MAX would require minimal additional training.
+
+**Issue 3 - Withholding Critical Information:** Constraint: Culture and organizational norms. Corporate culture valuing competitive advantage pressured employees to minimize disclosure. Boeing's hierarchical culture discouraged challenging management decisions, reinforcing conformity over ethical dissent.
+
+**Issue 4 - Delegating Ethical Responsibility:** Constraint: Regulatory ambiguity. When governmental oversight is inconsistent or delegated, engineers may believe compliance with minimal regulatory requirements suffices. FAA delegation created unclear responsibilities, allowing engineers to assume meeting regulatory requirements was sufficient even when ethically inadequate.
+
+**Issue 5 - Failing to Report Internal Design Flaws:** Constraint: Information silos and limited influence. Engineers working on subsystems lacked visibility into broader system risks and may have felt their input had minimal impact on final design decisions.
+
+---
+
+## Ethical Resolutions and Justifications
+
+### Issue 1: Should MCAS have been approved despite being faulty?
+
+**Resolution:** Boeing certification engineers should have refused to approve MCAS system certification given single-sensor dependency and no pilot notification requirements.
+
+**Stakeholders Affected:** Pilots, airline passengers, regulators | **Applicable ASME Canons:** Canon 1 (Public Safety), Canon 4 (Loyalty), Canon 7 (Truthful Statements) | **Conflicts:** Safety vs. protecting company secrecy | **Hierarchy:** Canon 1 & 7 take precedence
+
+**Justification:** Refusing MCAS certification would have prevented deaths while preserving trust in aviation safety systems and engineering professional integrity. This would have established precedent that economic and competitive pressures cannot justify compromising fundamental safety standards, ultimately protecting Boeing from catastrophic long-term financial and reputational damage.
+
+### Issue 2: Should MCAS risks have been more transparent to FAA and pilots?
+
+**Resolution:** Boeing should have disclosed MCAS to pilots and FAA more transparently.
+
+**Facts:** Boeing minimized FAA involvement; airlines and pilots were unaware of the system; hidden risks prevented proper training | **Assumptions:** Engineers knew transparency was required for certification; FAA relied on Boeing's delegated certification authority | **Canons:** Canon 1 (Safety), Canon 2 (Competence), Canon 7 (Truthful communication)
+
+**Justification:** Full disclosure would have embedded oversight and prevented fatal misunderstandings.
+
+### Issue 3: Should engineers have resisted pressure to accelerate?
+
+**Resolution:** Engineers should have resisted organizational pressure to rush certification.
+
+**Facts:** Certification was rushed; engineers were aware of flaws; internal pressure existed | **Assumptions:** Ethical responsibility overrides managerial direction; escalation channels were available | **Canons:** Canon 1 (Safety), Canon 2 (Competence) | **Conflict:** Employer pressure vs. safe engineering judgment | **Hierarchy:** Canon 1 outweighs employer demands
+
+**Justification:** Resisting pressure would have reinforced professional integrity and prevented unsafe deployment.
+
+### Issue 4: Should FAA have allowed Boeing to self-certify?
+
+**Resolution:** FAA should not have allowed Boeing to self-certify critical safety systems.
+
+**Stakeholders:** FAA, Boeing engineers, public | **Canons:** Canon 1 (Safety), Canon 4 (Loyalty), Canon 7 (Objectivity) | **Conflict:** Efficiency and trust vs. independent safety oversight | **Hierarchy:** Canon 1 & 7 take precedence
+
+**Justification:** Independent FAA oversight with external verification requirements would have prevented conflicts of interest and ensured objective safety evaluation.
+
+### Issue 5: Should engineers have reported pressure that compromised safety standards?
+
+**Resolution:** Engineers should have reported organizational pressure that compromised safety.
+
+**Facts:** Management discouraged raising safety concerns; engineers witnessed deviations from standards; FAA oversight was lacking | **Assumptions:** Reporting channels existed; silence led to unsafe results | **Canons:** Canon 1 & 7
+
+**Justification:** Reporting would have upheld ethical duty and prevented failure.
+
+---
+
+## Key Lessons and Professional Growth
+
+**1. Ethical Decision-Making Requires Systematic Analysis** - The structured framework (identifying facts, making reasonable assumptions, clarifying definitions, mapping stakeholders, applying ethical principles, analyzing conflicts) provides robust methodology for addressing complex ethical dilemmas. This systematic approach prevents reactive decision-making driven by immediate pressures.
+
+**2. Organizational Culture Shapes Individual Ethical Agency** - Corporate culture, incentive structures, and hierarchical pressures can create environments where engineers face significant barriers to upholding ethical standards. Individual moral courage must be supported by organizational structures that value safety over schedule and profit.
+
+**3. Professional Codes Provide Clear Hierarchy for Conflicts** - ASME Canon 1 (holding paramount the safety, health, and welfare of the public) takes absolute precedence over employer loyalty, competitive pressures, and economic considerations in life-critical systems. This hierarchy provides clear ethical guidance even when organizational pressures push in different directions.
+
+**4. Transparency and Communication Are Ethical Imperatives** - Failure to disclose MCAS functionality to pilots and regulators exemplified how information asymmetries create safety hazards. Engineers have ethical obligations not just to design safe systems but to ensure all stakeholders have information needed to use systems safely.
+
+**5. Regulatory Compliance Does Not Equal Ethical Practice** - Meeting minimum regulatory requirements, particularly when regulators delegate oversight to industry, does not fulfill engineers' independent ethical obligations. Engineers must exercise professional judgment about safety that goes beyond compliance with potentially inadequate regulations.
+
+**Application to Future Career:** As I pursue work in robotics and autonomous systems, these lessons are directly applicable. Autonomous systems raise similar ethical questions: acceptable risk levels, transparency requirements, balancing innovation speed with safety validation, and when commercial pressures compromise safety imperatives. I commit to applying analytical frameworks from this course—systematic fact-gathering, stakeholder analysis, principled reasoning, and transparent communication—to ensure my engineering work upholds the highest ethical standards.
+
+---
+
+## Conclusion
+
+The Boeing 737 MAX case represents comprehensive failure of engineering ethics at individual, organizational, and systemic levels. Through detailed analysis, I developed frameworks for identifying ethical issues, analyzing stakeholder impacts, applying professional codes, and navigating practical constraints that complicate ethical decision-making in professional practice.
+
+The fundamental lesson is that ethical engineering practice extends beyond technical competence to encompass moral courage, systematic analysis of ethical implications, transparent communication with stakeholders, and commitment to public safety that transcends organizational pressures and regulatory minimums. Engineers must actively consider broader implications of their work and commit to upholding professional obligations even when doing so creates personal or organizational costs.
+
+The analytical skills and ethical frameworks developed through MAE 4300 will be essential throughout my engineering career. As technologies become more complex and autonomous systems take on greater roles in safety-critical applications, the need for rigorous ethical reasoning grows correspondingly. This portfolio represents not just retrospective analysis but foundation for future professional practice. The Boeing 737 MAX tragedies demonstrate catastrophic consequences when ethical obligations are subordinated to competitive and financial pressures. By internalizing these lessons and committing to systematic ethical reasoning, I aim to contribute to engineering practice that earns and maintains public trust through demonstrated commitment to safety, transparency, and professional integrity.
 - Multiple stakeholders (FAA, airlines, pilots) assumed Boeing followed industry-standard redundancy practices
 
 It's unclear what internal pressure influenced engineers to raise concerns about MCAS. Senior management understood likelihood of sensor failure due to oversight in past 737 reliability, underestimated likelihood reported by House committee, which is the same used to determine FAA self-certification was feasible with delay.
