Update course year from Fall 2025 to Fall 2024

--- a/_pages/MAE4300.md
+++ b/_pages/MAE4300.md
@@ -1,10 +1,11 @@
 ---
 layout: default
 title: MAE 4300 Ethics Portfolio
+permalink: /MAE4300/
 ---
 
 # Engineering Ethics Portfolio
-**MAE 4300: Ethics in Engineering** | Sarah Grace Brown | NetID: seb353 | Fall 2025
+**MAE 4300: Ethics in Engineering** | Sarah Grace Brown | NetID: seb353 | Fall 2024
 
 ---
 
