--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -1,47 +1,36 @@
 ---
 layout: default
-title: MAE 4272 - Blade Design
+title: MAE 4272 Blade Design Project
+permalink: /MAE4272/
 ---
 
-# Wind Turbine Blade Design Project
-**MAE 4272 - Fluids and Heat Transfer Laboratory - Fall 2024**
+# Small-Scale Wind Turbine Blade Design
+**MAE 4272: Fluids and Heat Transfer Laboratory** | Team: Matt Bulger, Sarah Grace Brown, Marco Conte, Joshua McCrae | Fall 2025
+
+---
 
 ## Project Overview
-This semester-long project focused on designing and optimizing wind turbine blades for maximum power generation efficiency. Working as part of a design team, we applied fundamental principles of fluid dynamics, aerodynamics, and heat transfer to create a blade design that could effectively harness wind energy while meeting structural and manufacturing constraints.
 
-## Design Context and Objectives
-The project challenged us to design a wind turbine blade system capable of generating maximum power from a specified wind speed range while adhering to realistic constraints on materials, manufacturing methods, and structural integrity. Our primary objective was to optimize the blade geometry including airfoil selection, chord length distribution, twist angle variation, and overall blade length to achieve the highest possible coefficient of performance.
+As part of Cornell's MAE 4272 course, our team designed, analyzed, and tested a small-scale wind turbine blade optimized for maximum torque generation in low Reynolds number conditions (Re ≈ 9,300–21,000). Operating in the Big Blue wind tunnel under a Weibull wind distribution (mean speed 4.6 m/s), the three-bladed rotor faced strict constraints: 6-inch maximum radius, 2-inch maximum chord, 2000 rpm speed limit, and fabrication via SLA printing in Accura 25 material. The design prioritized reliable startup torque over peak aerodynamic efficiency, targeting operation at tip-speed ratio λ = 3 and 900 rpm.
 
-We operated under several key constraints. The design needed to be manufacturable using available composite materials and fabrication techniques. The blade had to withstand expected aerodynamic and centrifugal loads without excessive deflection or failure. We also had to balance performance optimization with cost considerations and practical manufacturing limitations.
+---
 
-## Design Process and Methodology
-Our design process began with fundamental aerodynamic theory, studying blade element momentum theory to understand how blade geometry affects power extraction from wind. We analyzed various airfoil profiles to select shapes that would provide optimal lift-to-drag ratios across our operating Reynolds number range. This theoretical foundation guided our initial design decisions.
+## Design Process
 
-We developed computational models to predict blade performance under various operating conditions. Using MATLAB and computational fluid dynamics tools, we iteratively refined our blade geometry to maximize the power coefficient. This involved optimizing the radial distributions of chord length and twist angle to ensure each blade section operated near its ideal angle of attack throughout the rotation.
+We began with statistical analysis of the Weibull wind distribution to establish our operating Reynolds number range, then selected the S1223 airfoil for its exceptional lift characteristics at low Re (CL_max = 1.8-2.0, nearly double that of conventional NACA airfoils). Using blade element momentum theory, we calculated optimal twist distribution ranging from 60° at the root to 14° at the tip to maintain a 3° angle of attack across the span. The chord tapered linearly from 2.0 inches at the root to 0.4 inches at the tip to reduce bending loads while maintaining adequate solidity inboard.
 
-Throughout the design process, we worked with several key hypotheses. We assumed quasi-steady aerodynamic behavior, allowing us to apply steady-state airfoil data to the rotating blade. We hypothesized that our selected airfoil family would maintain favorable aerodynamic characteristics across the range of Reynolds numbers experienced by different blade sections. We also assumed that manufacturing variations could be kept within tolerances that wouldn't significantly impact performance.
+MATLAB structural analysis confirmed a critical failure wind speed of 67.73 m/s—more than 10× above our operating range—validating the design's structural adequacy. ANSYS Fluent CFD simulations predicted 11.03 W power output, though CAD-to-CFD workflow challenges required manual airfoil file editing and multi-segment lofting to resolve trailing edge closure issues.
 
-## Key Design Decisions
+---
 
-### Airfoil Selection
-After evaluating multiple airfoil families, we selected airfoils optimized for the low Reynolds number regime typical of small wind turbines. Our chosen airfoils demonstrated excellent lift-to-drag ratios and gentle stall characteristics, which would help maintain performance even under off-design conditions. The airfoil selection balanced aerodynamic performance with considerations for manufacturability and structural integrity.
+## Testing and Results
 
-### Blade Geometry Optimization
-We optimized the radial variation of chord length and twist angle to maximize energy capture. The blade featured higher twist angles near the root to account for lower relative wind speeds in that region, with twist decreasing toward the tip where relative velocities are higher. Chord length was similarly optimized, starting wider at the root for structural support and tapering toward the tip for aerodynamic efficiency.
+Wind tunnel testing employed progressive loading from 2-10 volts on the magnetic brake to prevent premature stall, allowing full torque characterization at constant wind speeds (3, 5, and 7 m/s). Testing revealed our blade performed significantly better than predicted: maximum power output consistently occurred around 1300 rpm rather than the designed 900 rpm. At 7 m/s with maximum brake loading, the blade operated at only 1300 rpm—well below the 2000 rpm safety limit—and required progressively higher brake torque to stall as wind speed increased, indicating we never reached maximum performance within available test conditions.
 
-### Structural Considerations
-Our design incorporated structural analysis to ensure the blade could withstand operational loads. We calculated stress distributions from centrifugal forces and aerodynamic pressures, verifying that our chosen materials and geometry would provide adequate strength with appropriate safety factors. The design balanced the competing demands of aerodynamic efficiency and structural robustness.
+This suggests the blade's aerodynamic capability exceeded both our low-Re design predictions and the tunnel's operational envelope, demonstrating successful torque optimization while maintaining all safety margins.
 
-## Testing and Validation
-We validated our design through wind tunnel testing and comparison with theoretical predictions. Laboratory measurements of blade performance confirmed that our design achieved power coefficients close to theoretical predictions, with some deviations attributable to manufacturing imperfections and three-dimensional flow effects not fully captured in our two-dimensional airfoil analysis. These experiments provided valuable insights into the relationship between theory and real-world performance.
+---
 
-## Key Results and Conclusions
-Our final blade design successfully met the project objectives, achieving a maximum power coefficient that demonstrated effective energy extraction from wind. The project reinforced the importance of systematic design optimization and the value of computational tools in predicting real-world performance. We learned that successful turbine blade design requires careful integration of aerodynamic theory, structural analysis, and manufacturing constraints.
+## My Contribution
 
-The testing phase revealed that while our computational predictions were generally accurate, real-world performance depends critically on manufacturing quality and attention to aerodynamic details. Small deviations in blade geometry, surface finish, and assembly precision can measurably impact performance, highlighting the importance of quality control in turbine manufacturing.
-
-## Course Integration
-This project served as a capstone experience for MAE 4272, integrating fluid mechanics principles with hands-on laboratory work and design optimization. The course combined theoretical lectures on turbomachinery and aerodynamics with practical laboratory experiments, providing comprehensive training in both the science and engineering of fluid systems. The blade design project allowed us to apply these principles to a realistic engineering challenge with meaningful constraints and performance objectives.
-
-## Skills Developed
-Through this project, I gained practical experience in aerodynamic design, computational fluid dynamics, experimental validation, and technical communication. The work required proficiency in MATLAB for performance prediction, understanding of composite materials and manufacturing processes, and ability to synthesize results into clear technical documentation. These skills directly support my interest in designing advanced robotic systems where fluid-structure interactions play important roles.
+I led the aerodynamic design phase, conducting Reynolds number analysis, performing airfoil selection studies comparing S1223 against NACA 4412, and implementing blade element momentum theory calculations to determine optimal twist and pitch distributions. I developed MATLAB scripts for performance prediction and structural valida
