Revise MAE 4272 project details and contributions
Updated project details and contributions for MAE 4272, including a change in the semester from Fall 2025 to Fall 2024. Added figures and enhanced the description of contributions related to aerodynamic design and analysis.

--- a/_pages/MAE4272.md
+++ b/_pages/MAE4272.md
@@ -5,7 +5,7 @@ permalink: /MAE4272/
 ---
 
 # Small-Scale Wind Turbine Blade Design
-**MAE 4272: Fluids and Heat Transfer Laboratory** | Team: Matt Bulger, Sarah Grace Brown, Marco Conte, Joshua McCrae | Fall 2025
+**MAE 4272: Fluids and Heat Transfer Laboratory** | Team: Matt Bulger, Sarah Grace Brown, Marco Conte, Joshua McCrae | Fall 2024
 
 ---
 
@@ -33,4 +33,35 @@ This suggests the blade's aerodynamic capability exceeded both our low-Re design
 
 ## My Contribution
 
-I led the aerodynamic design phase, conducting Reynolds number analysis, performing airfoil selection studies comparing S1223 against NACA 4412, and implementing blade element momentum theory calculations to determine optimal twist and pitch distributions. I developed MATLAB scripts for performance prediction and structural valida
+I led the aerodynamic design phase, conducting Reynolds number analysis, performing airfoil selection studies comparing S1223 against NACA 4412, and implementing blade element momentum theory calculations to determine optimal twist and pitch distributions. I developed MATLAB scripts for performance prediction and structural validation, calculating torque outputs across the wind speed range and verifying that bending stresses remained within material limits. Additionally, I coordinated the team's experimental protocol development.
+
+---
+
+## Project Figures
+
+### Airfoil Performance Comparison
+![S1223 vs NACA 4412 Lift Comparison](/assets/images/4272/lift_comparison.png)
+*Figure 1: Lift coefficient comparison showing S1223's superior performance at low Reynolds numbers*
+
+![S1223 vs NACA 4412 Efficiency](/assets/images/4272/efficiency_comparison.png)
+*Figure 2: Lift-to-drag ratio demonstrating S1223's peak efficiency at α ≈ 3-5°*
+
+### CAD Model and Manufacturing
+![Blade CAD Model](/assets/images/4272/cad_model.png)
+*Figure 3: Final blade geometry showing twist distribution and chord taper*
+
+![Printed Blade](/assets/images/4272/printed_blade.png)
+*Figure 4: SLA-printed blade in Accura 25 mounted for wind tunnel testing*
+
+### Analysis Results
+![Torque Prediction](/assets/images/4272/torque_prediction.png)
+*Figure 5: Predicted rotor torque vs. wind speed from blade element momentum analysis*
+
+![CFD Pressure Contour](/assets/images/4272/pressure_contour.png)
+*Figure 6: ANSYS Fluent pressure distribution showing high-pressure regions driving blade rotation*
+
+---
+
+## Key Takeaways
+
+This project demonstrated successful integration of aerodynamic theory, computational analysis, and experimental validation for low Reynolds number applications. The blade exceeded design performance expectations, validating our torque-first optimization strategy while highlighting opportunities for improved low-Re flow modeling and CFD prediction accuracy in future iterations.
